--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -7,7 +7,7 @@
 
 .dialogsItems {
     padding: 10px;
-
+    color: white;
 }
 .dialogsItems .active{
     color:gold;
@@ -18,5 +18,5 @@
 }
 
 .messages .message {
-
+    color: white;
 }
